@startuml

title __ADAPTERS's Class Diagram__\n

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      class DonationsAdapter {
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      class MyDeliveriesAdapter {
          - deliveries : List<DeliveryItem>
          + MyDeliveriesAdapter()
          + setOnItemClickListener()
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      interface OnClickListener {
          {abstract} + onClick()
          {abstract} + onClickAddDeliveryImage()
          {abstract} + onClickImage()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      class DeliveryViewHolder {
          - donorNameTextView : TextView
          - donorContactNumberTextView : TextView
          - sourceAddressTextView : TextView
          - destinationAddressTextView : TextView
          - statusTextView : TextView
          - donationImageView : ImageView
          - deliveryImageView : ImageView
          ~ DeliveryViewHolder()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      class MyDonationsAdapter {
          - donations : List<DonationItem>
          + MyDonationsAdapter()
          + setOnItemClickListener()
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      interface OnClickListener {
          {abstract} + onClick()
          {abstract} + onClickImage()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      class DonationViewHolder {
          - descriptionTextView : TextView
          - statusTextView : TextView
          - delivererNameTextView : TextView
          - delivererContactNumberTextView : TextView
          - donationImageView : ImageView
          - deliveryImageView : ImageView
          ~ DonationViewHolder()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      class RequirementsAdapter {
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      class StoriesAdapter {
          - stories : List<Story>
          + StoriesAdapter()
          + setOnItemClickListener()
          + onCreateViewHolder()
          + onBindViewHolder()
          + getItemCount()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      interface OnClickListener {
          {abstract} + onClickImage()
      }
    }
  }
  

  package com.android.navada.donit {
    package com.android.navada.donit.adapters {
      class StoryViewHolder {
          - addedByTextView : TextView
          - mainContentTextView : TextView
          - storyImageView : ImageView
          ~ StoryViewHolder()
      }
    }
  }
  

  DonationsAdapter -up-|> Adapter
  MyDeliveriesAdapter -up-|> Adapter
  MyDeliveriesAdapter o-- OnClickListener : mListener
  MyDeliveriesAdapter +-down- OnClickListener
  MyDeliveriesAdapter +-down- DeliveryViewHolder
  DeliveryViewHolder -up-|> ViewHolder
  MyDonationsAdapter -up-|> Adapter
  MyDonationsAdapter o-- OnClickListener : mListener
  MyDonationsAdapter +-down- OnClickListener
  MyDonationsAdapter +-down- DonationViewHolder
  DonationViewHolder -up-|> ViewHolder
  RequirementsAdapter -up-|> Adapter
  StoriesAdapter -up-|> Adapter
  StoriesAdapter o-- OnClickListener : mListener
  StoriesAdapter +-down- OnClickListener
  StoriesAdapter +-down- StoryViewHolder
  StoryViewHolder -up-|> ViewHolder


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
